samples/_failures_safe/1761165990_de497e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5869dfe.c: In function ‘main’:
./samples/SAFE/__tmp_a5869dfe.c:158:9: error: expected declaration or statement at end of input
  158 |         printf("Error reading input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a5869dfe.c:158:9: error: expected declaration or statement at end of input
